fix: fix font issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3360,6 +3360,7 @@ html {
   .text-size-small {
     color: var(--black);
     font-size: .875rem;
+    text-transform: none;
   }
   
   .text-size-small.text-color-alternate {
