feat: change logo and main slider images

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4810,8 +4810,8 @@ html {
     flex-flow: row;
     justify-content: flex-start;
     align-items: center;
-    width: 8.5rem;
-    height: 8.5rem;
+    width: 4rem;
+    height: 4rem;
     display: flex;
     position: relative;
     overflow: hidden;
@@ -5168,8 +5168,11 @@ html {
   
   .work-image {
     object-fit: cover;
-    width: 100%;
-    height: 100%;
+
+  }
+  .leader-image{
+    width: 30rem;
+    height: 30rem;
   }
   
   .work-content-wrapper {
@@ -5180,6 +5183,7 @@ html {
     align-items: flex-start;
     padding: 4rem;
     display: flex;
+    
   }
   
   .work-content-wrapper._02 {
@@ -8107,11 +8111,6 @@ html {
     font-style: normal;
     font-display: swap;
   }
-
-
-.bigger-image{
-  font-size: 10rem;
-}
 
 .leader-box{
   display: flex;
